Interval ipak 5 minuta zbog trajnja inicijalnog importa. Pokrece se refresh na svakih 5 minuta, za opcije koje se generisu ne diraju se one koje pripadaju nekom portfoliju a sve ostale se brisu i generisu nove. Tako se radi i za forex i stock, na history se dodaje samo ono novo ne pravi se ispocetka. Dodato podesavanje ask za listinge. Ispravljeno sto je cena nekih opcija bila 0.00 zbog zaokruzivanja.